[#35018] Fix: Weird title wrapping for some items in object browser

--- a/app/assets/stylesheets/modules/components/_data-cycle-objects.scss
+++ b/app/assets/stylesheets/modules/components/_data-cycle-objects.scss
@@ -348,7 +348,7 @@
       >a,
       >span {
         padding: 0 3px !important;
-        margin-left: 3px;
+        //margin-left: 3px;
 
         &.copy {
           position: relative;
